--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "private": true,
   "homepage": "https://goitacademy.github.io/react-homework-template/",
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "formik": "^2.4.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "redux-persist": "^6.0.0",
+    "web-vitals": "^2.1.3",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
